// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code genProxyCode 1`] = `
"
const { registerUTSInterface, initUTSProxyClass, initUTSProxyFunction, initUTSPackageName, initUTSIndexClassName, initUTSClassName } = uni
const name = 'test-uts'
const moduleName = '测试'
const moduleType = 'built-in'
const errMsg = \`\`
const is_uni_modules = false
const pkg = /*#__PURE__*/ initUTSPackageName(name, is_uni_modules)
const cls = /*#__PURE__*/ initUTSIndexClassName(name, is_uni_modules)

export const TestUTSComponent = {}

registerUTSInterface('RequestTaskOptions',Object.assign({ moduleName, moduleType, errMsg, package: pkg, class: initUTSClassName(name, 'RequestTaskByJsProxy', is_uni_modules) }, {"methods":{"startByJs":{"async":false,"keepAlive":false,"params":[]},"abortByJs":{"async":false,"keepAlive":false,"params":[],"return":{"type":"interface","options":"RequestTaskOptions"}}},"props":[],"setters":{}} ))
export const onMemoryWarning = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'onMemoryWarningByJs', keepAlive: false, params: [{"name":"callback","type":"UTSCallback"}], return: ""})
export const offMemoryWarning = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'offMemoryWarningByJs', keepAlive: false, params: [{"name":"callback","type":"UTSCallback","default":"UTSNull"}], return: ""})
export default /*#__PURE__*/ initUTSProxyClass(Object.assign({ moduleName, moduleType, errMsg, package: pkg, class: initUTSClassName(name, 'UserByJs', is_uni_modules) }, {"constructor":{"params":[]},"methods":{"registerByJs":{"async":false,"keepAlive":false,"params":[]},"loginByJs":{"async":false,"keepAlive":false,"params":[]}},"staticMethods":{},"props":[],"staticProps":[],"setters":{},"staticSetters":{}} ))
export const a = 1
export const showToast1 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'showToast1ByJs', keepAlive: false, params: [{"name":"msg","type":"string"}], return: ""})
export const showToast2 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'showToast2ByJs', keepAlive: false, params: [{"name":"msg","type":"string"}], return: ""})
export const request = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'requestByJs', keepAlive: false, params: [], return: {"type":"interface","options":"RequestTaskOptions"}})
export const addUsers1 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'addUsers1ByJs', keepAlive: false, params: [{"name":"users","type":"uts.sdk.testUTSUser1JSONObject"}], return: ""})
export const addUsers2 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'addUsers2ByJs', keepAlive: false, params: [{"name":"users","type":"uts.sdk.testUTSUser1JSONObject"}], return: ""})
export const addUsers3 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'addUsers3ByJs', keepAlive: false, params: [{"name":"user","type":"uts.sdk.testUTSUser1JSONObject"},{"name":"name","type":"string"}], return: ""})
export const addUsers4 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'addUsers4ByJs', keepAlive: false, params: [{"name":"user","type":"uts.sdk.testUTSUser1JSONObject"},{"name":"name","type":"string"}], return: ""})
"
`;

exports[`code genProxyCode 2`] = `
{
  "components": [
    "TestUTS",
  ],
  "customElements": [],
  "exports": {
    "RequestTask": {
      "type": "interface",
    },
    "User": {
      "type": "class",
    },
    "a": {
      "type": "var",
    },
    "addUsers1": {
      "params": [
        {
          "name": "users",
          "type": "uts.sdk.testUTSUser1JSONObject",
        },
      ],
      "type": "function",
    },
    "addUsers2": {
      "params": [
        {
          "name": "users",
          "type": "uts.sdk.testUTSUser1JSONObject",
        },
      ],
      "type": "function",
    },
    "addUsers3": {
      "params": [
        {
          "name": "user",
          "type": "uts.sdk.testUTSUser1JSONObject",
        },
        {
          "name": "name",
          "type": "string",
        },
      ],
      "type": "function",
    },
    "addUsers4": {
      "params": [
        {
          "name": "user",
          "type": "uts.sdk.testUTSUser1JSONObject",
        },
        {
          "name": "name",
          "type": "string",
        },
      ],
      "type": "function",
    },
    "offMemoryWarning": {
      "params": [
        {
          "default": "UTSNull",
          "name": "callback",
          "type": "UTSCallback",
        },
      ],
      "type": "function",
    },
    "onMemoryWarning": {
      "params": [
        {
          "name": "callback",
          "type": "UTSCallback",
        },
      ],
      "type": "function",
    },
    "request": {
      "params": [],
      "type": "function",
    },
    "showToast1": {
      "params": [
        {
          "name": "msg",
          "type": "string",
        },
      ],
      "type": "var",
    },
    "showToast2": {
      "params": [
        {
          "name": "msg",
          "type": "string",
        },
      ],
      "type": "var",
    },
  },
  "typeParams": [],
  "types": {
    "RequestTask": "interface",
    "ShowToast": "function",
    "TestUTSElement": "class",
    "uni": [],
  },
}
`;

exports[`code genProxyCode 3`] = `
{
  "alias": {},
  "class": {
    "User1": {
      "interfaces": [],
      "keepAliveMethods": [],
      "typeParams": false,
    },
  },
  "fn": {
    "ShowToast": [
      {
        "pat": {
          "optional": false,
          "span": {
            "ctxt": 0,
            "end": 37,
            "start": 26,
          },
          "type": "Identifier",
          "typeAnnotation": {
            "span": {
              "ctxt": 0,
              "end": 37,
              "start": 29,
            },
            "type": "TsTypeAnnotation",
            "typeAnnotation": {
              "kind": "string",
              "span": {
                "ctxt": 0,
                "end": 37,
                "start": 31,
              },
              "type": "TsKeywordType",
            },
          },
          "value": "msg",
        },
        "span": {},
        "type": "Parameter",
      },
    ],
  },
  "interface": {
    "RequestTask": {
      "decl": {
        "body": {
          "body": [
            {
              "computed": false,
              "isOverride": false,
              "key": {
                "optional": false,
                "span": {
                  "ctxt": 0,
                  "end": 85,
                  "start": 80,
                },
                "type": "Identifier",
                "value": "start",
              },
              "optional": false,
              "params": [],
              "readonly": false,
              "span": {
                "ctxt": 0,
                "end": 93,
                "start": 80,
              },
              "type": "TsMethodSignature",
              "typeAnn": {
                "span": {
                  "ctxt": 0,
                  "end": 93,
                  "start": 87,
                },
                "type": "TsTypeAnnotation",
                "typeAnnotation": {
                  "kind": "void",
                  "span": {
                    "ctxt": 0,
                    "end": 93,
                    "start": 89,
                  },
                  "type": "TsKeywordType",
                },
              },
              "typeParams": null,
            },
            {
              "computed": false,
              "isOverride": false,
              "key": {
                "optional": false,
                "span": {
                  "ctxt": 0,
                  "end": 101,
                  "start": 96,
                },
                "type": "Identifier",
                "value": "abort",
              },
              "optional": false,
              "params": [],
              "readonly": false,
              "span": {
                "ctxt": 0,
                "end": 116,
                "start": 96,
              },
              "type": "TsMethodSignature",
              "typeAnn": {
                "span": {
                  "ctxt": 0,
                  "end": 116,
                  "start": 103,
                },
                "type": "TsTypeAnnotation",
                "typeAnnotation": {
                  "span": {
                    "ctxt": 0,
                    "end": 116,
                    "start": 105,
                  },
                  "type": "TsTypeReference",
                  "typeName": {
                    "optional": false,
                    "span": {
                      "ctxt": 0,
                      "end": 116,
                      "start": 105,
                    },
                    "type": "Identifier",
                    "value": "RequestTask",
                  },
                  "typeParams": null,
                },
              },
              "typeParams": null,
            },
          ],
          "span": {
            "ctxt": 0,
            "end": 118,
            "start": 76,
          },
          "type": "TsInterfaceBody",
        },
        "declare": false,
        "extends": [],
        "id": {
          "optional": false,
          "span": {
            "ctxt": 0,
            "end": 75,
            "start": 64,
          },
          "type": "Identifier",
          "value": "RequestTask",
        },
        "span": {
          "ctxt": 0,
          "end": 118,
          "start": 54,
        },
        "type": "TsInterfaceDeclaration",
        "typeParams": null,
      },
      "returned": true,
    },
  },
  "uni": [],
}
`;

exports[`code genProxyCode cjs 1`] = `
"
const { registerUTSInterface, initUTSProxyClass, initUTSProxyFunction, initUTSPackageName, initUTSIndexClassName, initUTSClassName } = uni
const name = 'test-uts'
const moduleName = ''
const moduleType = ''
const errMsg = \`\`
const is_uni_modules = false
const pkg = /*#__PURE__*/ initUTSPackageName(name, is_uni_modules)
const cls = /*#__PURE__*/ initUTSIndexClassName(name, is_uni_modules)

const exports = { __esModule: true }

exports.TestUTSComponent = {}

registerUTSInterface('RequestTaskOptions',Object.assign({ moduleName, moduleType, errMsg, package: pkg, class: initUTSClassName(name, 'RequestTaskByJsProxy', is_uni_modules) }, {"methods":{"startByJs":{"async":false,"keepAlive":false,"params":[]},"abortByJs":{"async":false,"keepAlive":false,"params":[],"return":{"type":"interface","options":"RequestTaskOptions"}}},"props":[],"setters":{}} ))
exports.onMemoryWarning = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'onMemoryWarningByJs', keepAlive: false, params: [{"name":"callback","type":"UTSCallback"}], return: ""})
exports.offMemoryWarning = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'offMemoryWarningByJs', keepAlive: false, params: [{"name":"callback","type":"UTSCallback","default":"UTSNull"}], return: ""})
exports.default = initUTSProxyClass(Object.assign({ moduleName, moduleType, errMsg, package: pkg, class: initUTSClassName(name, 'UserByJs', is_uni_modules) }, {"constructor":{"params":[]},"methods":{"registerByJs":{"async":false,"keepAlive":false,"params":[]},"loginByJs":{"async":false,"keepAlive":false,"params":[]}},"staticMethods":{},"props":[],"staticProps":[],"setters":{},"staticSetters":{}} ))
const a = 1
exports.a = a
exports.showToast1 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'showToast1ByJs', keepAlive: false, params: [{"name":"msg","type":"string"}], return: ""})
exports.showToast2 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'showToast2ByJs', keepAlive: false, params: [{"name":"msg","type":"string"}], return: ""})
exports.request = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'requestByJs', keepAlive: false, params: [], return: {"type":"interface","options":"RequestTaskOptions"}})
exports.addUsers1 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'addUsers1ByJs', keepAlive: false, params: [{"name":"users","type":"uts.sdk.testUTSUser1JSONObject"}], return: ""})
exports.addUsers2 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'addUsers2ByJs', keepAlive: false, params: [{"name":"users","type":"uts.sdk.testUTSUser1JSONObject"}], return: ""})
exports.addUsers3 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'addUsers3ByJs', keepAlive: false, params: [{"name":"user","type":"uts.sdk.testUTSUser1JSONObject"},{"name":"name","type":"string"}], return: ""})
exports.addUsers4 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'addUsers4ByJs', keepAlive: false, params: [{"name":"user","type":"uts.sdk.testUTSUser1JSONObject"},{"name":"name","type":"string"}], return: ""})
uni.registerUTSPlugin('utssdk/test-uts', exports)
"
`;

exports[`code genProxyCode uni_modules 1`] = `
"
const { registerUTSInterface, initUTSProxyClass, initUTSProxyFunction, initUTSPackageName, initUTSIndexClassName, initUTSClassName } = uni
const name = 'test-uts'
const moduleName = ''
const moduleType = ''
const errMsg = \`\`
const is_uni_modules = true
const pkg = /*#__PURE__*/ initUTSPackageName(name, is_uni_modules)
const cls = /*#__PURE__*/ initUTSIndexClassName(name, is_uni_modules)



registerUTSInterface('ITestOptions',Object.assign({ moduleName, moduleType, errMsg, package: pkg, class: initUTSClassName(name, 'ITestByJsProxy', is_uni_modules) }, {"methods":{},"props":["name"],"setters":{"name":{"name":"name","type":"string"}}} ))
export const createTest = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'createTestByJs', keepAlive: false, params: [], return: {"type":"interface","options":"ITestOptions"}})
export const testUnion = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'testUnionByJs', keepAlive: false, params: [{"name":"arg","type":"","default":"UTSNull"}], return: ""})
registerUTSInterface('A12Options',Object.assign({ moduleName, moduleType, errMsg, package: pkg, class: initUTSClassName(name, 'A12ByJsProxy', is_uni_modules) }, {"methods":{"test2ByJs":{"async":false,"keepAlive":false,"params":[]},"test1ByJs":{"async":false,"keepAlive":false,"params":[]},"test0ByJs":{"async":false,"keepAlive":false,"params":[]}},"props":[],"setters":{}} ))
export const testA3 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'testA3ByJs', keepAlive: false, params: [], return: {"type":"interface","options":"A12Options"}})
"
`;

exports[`code genProxyCode uni_modules keepAlive 1`] = `
"
const { registerUTSInterface, initUTSProxyClass, initUTSProxyFunction, initUTSPackageName, initUTSIndexClassName, initUTSClassName } = uni
const name = 'test-keepAlive'
const moduleName = ''
const moduleType = ''
const errMsg = \`\`
const is_uni_modules = true
const pkg = /*#__PURE__*/ initUTSPackageName(name, is_uni_modules)
const cls = /*#__PURE__*/ initUTSIndexClassName(name, is_uni_modules)



registerUTSInterface('ITestKeepAliveOptions',Object.assign({ moduleName, moduleType, errMsg, package: pkg, class: initUTSClassName(name, 'ITestKeepAliveByJsProxy', is_uni_modules) }, {"methods":{"test1ByJs":{"async":false,"keepAlive":false,"params":[{"name":"callback","type":"UTSCallback"}]},"test2ByJs":{"async":false,"keepAlive":true,"params":[{"name":"callback","type":"UTSCallback"}]}},"props":[],"setters":{}} ))
export const test1 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'test1ByJs', keepAlive: false, params: [{"name":"callback","type":"UTSCallback"}], return: ""})
export const test2 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'test2ByJs', keepAlive: true, params: [{"name":"callback","type":"UTSCallback"}], return: ""})
export const Test = /*#__PURE__*/ initUTSProxyClass(Object.assign({ moduleName, moduleType, errMsg, package: pkg, class: initUTSClassName(name, 'TestByJs', is_uni_modules) }, {"constructor":{"params":[]},"methods":{"test1ByJs":{"async":false,"keepAlive":false,"params":[{"name":"callback","type":"UTSCallback"}]},"test2ByJs":{"async":false,"keepAlive":true,"params":[{"name":"callback","type":"UTSCallback"}]}},"staticMethods":{"test3ByJs":{"async":false,"keepAlive":false,"params":[{"name":"callback","type":"UTSCallback"}]},"test4ByJs":{"async":false,"keepAlive":true,"params":[{"name":"callback","type":"UTSCallback"}]}},"props":[],"staticProps":[],"setters":{},"staticSetters":{}} ))
export const createTest2 = /*#__PURE__*/ initUTSProxyFunction(false, { moduleName, moduleType, errMsg, main: true, package: pkg, class: cls, name: 'createTest2ByJs', keepAlive: false, params: [], return: {"type":"interface","options":"ITestKeepAliveOptions"}})
"
`;
